# db_replication

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
cqrs_app/: application.py  extensions.py
cqrs_app/lib/: elasticsearch.py
cqrs_app/models/document/: listeners.py
cqrs_app/models/graph/: listeners.py
cqrs_app/models/relational/: post.py  user.py
cqrs_app/templates/: base.jinja2
cqrs_app/views/cli/: views.py
cqrs_app/views/cli/posts/: the_alchemist.txt  the_beast_in_the_cave.txt
cqrs_app/views/main/: views.py
cqrs_app/views/main/templates/main/: index.jinja2
db_replication/: application.py  extensions.py
db_replication/lib/: arango.py  elasticsearch.py
db_replication/models/document/: listeners.py  post.py
db_replication/models/graph/: listeners.py  user.py
db_replication/models/relational/: post.py  user.py
db_replication/templates/: base.jinja2
db_replication/views/cli/: views.py
db_replication/views/cli/posts/: lorem_ipsum.txt  the_tale_of_peter_rabbit.txt
db_replication/views/main/: views.py
db_replication/views/main/templates/main/: login.jinja2  post_more_like_this.jinja2  user_fof.jinja2  user_index.jinja2
db_replication/views/main/templates/main/includes/: cards.jinja2
