[tool.poetry]
name = "db-replication"
version = "0.1.0"
description = ""
authors = ["Erik Wiffin <erik@devetry.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
furl = "^2.1"
python-arango = "^5.1"
flask-sqlalchemy = "^2.4"
psycopg2-binary = "^2.8"
flask-login = "^0.4.1"
elasticsearch = "^7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = "=19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
